Saving the installation script (not working yet) and some documentations

--- a/docs/.Create_LaTeX_Document/Lib file.tex
+++ b/docs/.Create_LaTeX_Document/Lib file.tex
@@ -15,18 +15,18 @@
 \fontfamily{}
 
 \pagecolor{black}
-\title{\color{red}Fonctions du fichier de librairie \color{lime}Permissions.lib}\color{white}
+\title{\color{red}Fonctions du fichier de librairie \color{lime}Errors.lib}\color{white}
 \author{Dimitri OBEID}
 \date{2021}
 \pagestyle{fancy}
 \justifying
 
 \pdfinfo{
-  /Title    (Fonctions du fichier de librairie Permissions.lib)
+  /Title    (Fonctions du fichier de librairie Errors.lib)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Fonctions du fichier de librairie Permissions.lib)
+  /Subject  (Fonctions du fichier de librairie Errors.lib)
   /Keywords ()
 }
 
@@ -99,5 +99,4 @@ Ce fichier source inclut des fonctions servant à la gestion d'erreurs.\\[1\base
 \subsection{}\color{white}
 
 \end{document}
- 
  
