--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -52,14 +52,16 @@ Ce fichier source inclut des fonctions servant à la création de headers, sépa
 \textbf{Nom du fichier :} \textbf{\color{lime}Checkings.lib\color{white}}\\[1\baselineskip]
 \textbf{Dossier parent :} \textbf{\color{lime}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH/lib/functions/main\color{white}*}\\[1\baselineskip]
 
-\textbf{*} : Voir la variable \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH/lib/functions/main\color{white}} dans la sous-sous-catégorie\linebreak \textbf{\color{blue}Variables\color{white}}.\\[1\baselineskip]
+\textbf{*} : Voir la variable \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{white}} dans la sous-sous-catégorie \textbf{\color{blue}Variables\color{white}}.\\[1\baselineskip]
 
 
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
 \textbf{Nom du fichier :} \textbf{\color{lime}Colors.conf\color{white}}\\[1\baselineskip]
-\textbf{Dossier parent :} \textbf{\color{lime}\$\_\_BU\_MODULE\_UTILS\_ROOT/config/modules/main\color{white}}\\[1\baselineskip]
+\textbf{Dossier parent :} \textbf{\color{lime}\$\_\_BU\_MODULE\_UTILS\_ROOT/config/modules/main\color{white}*}\\[1\baselineskip]
+
+\textbf{*} : Voir la variable \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{white}} dans la sous-sous-catégorie \textbf{\color{blue}Variables\color{white}}.\\[1\baselineskip]
 
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
@@ -79,7 +81,7 @@ Ce fichier source inclut des fonctions servant à la création de headers, sépa
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
-\color{blue}
+\color{blue}Terminal
 \subsubsection{Fonctions}\color{white}
 \textbf{Fonction :} \textbf{\color{mauve}IsChar\color{white}}\\[1\baselineskip]
 
@@ -96,6 +98,16 @@ Ce fichier source inclut des fonctions servant à la création de headers, sépa
 \textbf{Description :} Chacune des variables globales commençant par ce nom contient le nom de la couleur encodée lors de l'appel d'une de ces variables.\\[1\baselineskip]
 
 \textbf{Fichier de définition :} \textbf{\color{lime}Colors.conf\color{white}}\\[1\baselineskip]
+
+
+
+\par\noindent\rule{\textwidth}{0.4pt}\\[1\baselineskip]
+
+\textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{white}}\\[1\baselineskip]
+
+\textbf{Description :} Cette variable globale enregistre le chemin du dossier racine de la librairie Bash Utils, celui qui contient toutes les documentation, les fichiers sources et des fichiers de ressources.\\[1\baselineskip]
+
+\textbf{Fichier de définition :} \textbf{\color{lime}module.conf\color{white}}\\[1\baselineskip]
 
 
 
