--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -27,3 +27,102 @@ BU_MAIN_MSG_CHECKINGS_,,,,
 ,,,,
 /,,,,
 BU_MAIN_MSG_CHECKSTAT_ConfEcho_HEADER_ERROR,Printing the error that occured during a status variable value checking.,Error,"${__BU_MAIN_COLOR_ERROR}${__BU_MAIN_TXT_TAB}${__BU_MAIN_TXT_TAB}In ${__BU_MAIN_COLOR_HIGHLIGHT}$p_file${__BU_MAIN_COLOR_ERROR}, line ${__BU_MAIN_COLOR_HIGHLIGHT}$p_lineno${__BU_MAIN_COLOR_ERROR} →",
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+/,,,,
+BU_MAIN_MSG_DECHO,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+/,,,,
+BU_MAIN_MSG_DIRS,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+/,,,,
+BU_MAIN_MSG_ECHO,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+/,,,,
+BU_MAIN_MSG_ERRORS,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+/,,,,
+BU_MAIN_MSG_FILES,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+/,,,,
+BU_MAIN_MSG_HEADERS,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+/,,,,
+BU_MAIN_MSG_LANG,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+/,,,,
+BU_MAIN_MSG_PERM,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+/,,,,
+BU_MAIN_MSG_POSIXTERM,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+/,,,,
+BU_MAIN_MSG_TEXT,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+,,,,
+/,,,,
+BU_MAIN_MSG_TIME,,,,
