--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -26,8 +26,8 @@ BU_MAIN_MSG_CHECKINGS_,,,,
 ,,,,
 ,,,,
 /,,,,
-BU_MAIN_MSG_CHECKSTAT_ConfEcho_HEADER_ERROR,Printing the error that occured during a status variable value checking.,Error,"${__BU_MAIN_COLOR_ERROR}${__BU_MAIN_TXT_TAB}${__BU_MAIN_TXT_TAB}In ${__BU_MAIN_COLOR_HIGHLIGHT}$p_file${__BU_MAIN_COLOR_ERROR}, line ${__BU_MAIN_COLOR_HIGHLIGHT}$p_lineno${__BU_MAIN_COLOR_ERROR} →",
-,,,,
+BU_MAIN_MSG_CHECKSTAT_ConfEcho_HEADER_ERROR,Printing the error that occured during a status variable value checking.,Error,,
+,,,"${__BU_MAIN_COLOR_ERROR}${__BU_MAIN_TXT_TAB}${__BU_MAIN_TXT_TAB}In ${__BU_MAIN_COLOR_HIGHLIGHT}$p_file${__BU_MAIN_COLOR_ERROR}, line ${__BU_MAIN_COLOR_HIGHLIGHT}$p_lineno${__BU_MAIN_COLOR_ERROR} →",
 ,,,,
 ,,,,
 ,,,,
@@ -105,7 +105,7 @@ BU_MAIN_MSG_PERM,,,,
 ,,,,
 ,,,,
 /,,,,
-BU_MAIN_MSG_POSIXTERM,,,,
+ ,,,,
 ,,,,
 ,,,,
 ,,,,
