--- a/docs/fr/(Mise à jour en cours) Introduction.tex
+++ b/docs/fr/(Mise à jour en cours) Introduction.tex
@@ -47,94 +47,118 @@
 
 \color{green}
 \subsection{Présentation}\color{white}
-Bash Utils est une librairie, c'est à dire un ensemble de fonctions utilitaires, regroupées et mises à disposition afin de pouvoir être utilisées sans avoir à les réécrire.\linebreak
+Bash Utils est une librairie, c'est à dire un ensemble de fonctions utilitaires, regroupées et mises à disposition afin de pouvoir être utilisées sans avoir à les réécrire.\\[1\baselineskip]
 
-Comme son nom le suggère, il s'agit d'une librairie orientée vers le langage Bash, un langage de script permettant une interaction simple avec le shell (interpréteur de commandes) du système d'exploitation, ainsi qu'avec ses différents programmes.\linebreak
+Comme son nom le suggère, il s'agit d'une librairie orientée vers le langage Bash, un langage de script permettant une interaction simple avec le shell (interpréteur de commandes) du système d'exploitation, ainsi qu'avec ses différents programmes.\\[1\baselineskip]
+
+Bash Utils est divisé en deux parties : la libraire, et les modules, expliqués dans le fichier \linebreak \textbf{\color{lime}modules/Fonctionnement.pdf\color{white}}.\\[1\baselineskip]
 
 Le shell utilisé est le Bash, qui est de loin le shell le plus utilisé dans le monde d'UNIX. Ce choix s'explique non seulement par sa vaste présence, mais aussi par sa très vaste documentation disponible.
 
 \color{green}
 \subsection{Utilisation}\color{white}
-Pour utiliser cette librairie, il vous suffira de sourcer deux fichiers :
+Pour utiliser cette librairie, il vous suffira de sourcer un seul fichier :
 \begin{itemize}
-    \item \color{orange}\textbf{\$HOME\color{lime}/.bash\_profile\color{white} :} \color{white} Ce fichier à sourcer en tout premier lieu doit contenir les variables suivantes :
-    \begin{itemize}
-        \item \color{orange}\textbf{\$\_\_BASH\_UTILS\_ROOT\color{white} :} \color{white} Contient le chemin vers le dossier racine de la librairie, appelé \color{lime}\textbf{Bash-utils}\color{white}.
-        \item \color{orange}\textbf{\$\_\_BASH\_UTILS\color{white} :} \color{white} Contient le chemin vers le dossier du fichier d'initialisation, de préférence en appelant la variable précédente.\linebreak
-    \end{itemize}
-
-    \item \color{lime}\textbf{Initializer.sh\color{white} :} \color{white} Ce fichier est l'initialiseur de la librairie Bash Utils. Il doit être sourcé en deuxième lieu.
-
+    \item \color{orange}\textbf{\$HOME\color{lime}/.Bash-utils-init.sh\color{white} :} \color{white} Ce fichier 
 \end{itemize}
-	Pour en savoir plus sur les instructions concernant le fichier \color{lime}\textbf{.bash\_profile}\color{white}, veuillez consulter la sous-section \textbf{Configurations} plus bas.
-
 
 \color{green}
 \subsection{Architecture}\color{white}
-Bash Utils est un ensemble de fichiers shell à sourcer dans un script (servant de fichiers source), de fichiers de configuration, d'outils de développement ou encore de scripts déjà prêts à l'exécution.
+Bash Utils est un ensemble de fichiers shell à sourcer dans un script (servant de fichiers source), de fichiers de configuration, d'outils de développement ou encore de scripts déjà prêts à l'exécution.\\[1\baselineskip]
 
 Les dossiers contenus dans  :
 \color{blue}
 \subsubsection{bin}\color{white}
-Ce dossier contient les fichiers exécutables nécessaires au bon fonctionnement de la librairie.
+Ce dossier contient les fichiers exécutables nécessaires au bon fonctionnement de la librairie.\\[1\baselineskip]
+
+
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{config}\color{white}
-Ce dossier contient les fichiers de configuration de la librairie.
+Ce dossier contient les fichiers de configuration de la librairie.\\[1\baselineskip]
+
+
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{docs}\color{white}
-Ce dossier contient toute la documentation utile aux développeurs et aux utilisateurs.
+Ce dossier contient toute la documentation utile aux développeurs et aux utilisateurs.\\[1\baselineskip]
+
+
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{install}\color{white}
-Ce dossier contient les fichiers et dossiers nécessaires à l'installation automatique de la librairie.
+Ce dossier contient les fichiers et dossiers nécessaires à l'installation automatique de la librairie.\\[1\baselineskip]
+
+
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{lib}\color{white}
-Ce dossier est le plus important de tous, car il contient tous les fichiers source de la librairie (fonctions et variables), ainsi que le fichier d'initialisation à sourcer dans un script principal.
+Ce dossier est le plus important de tous, car il contient tous les fichiers source de la librairie (fonctions et variables), ainsi que le fichier d'initialisation à sourcer dans un script principal.\\[1\baselineskip]
 
 Il contient trois sous-dossiers :
 \begin{itemize}
-    \item \color{lime}\textbf{functions\color{white} :} \color{white} ce sous-dossier contient tous les fichiers de fonctions dans différents sous-dossiers.
-    \item \color{lime}\textbf{lang\color{white} :} \color{white} ce sous-dossier contient tous les fichiers nécessaires à la traduction des scripts (fonctionnalité future).
-    \item \color{lime}\textbf{variables\color{white} :} \color{white} ce sous-dossier contient tous les fichiers enregistrant des variables.
+    \item \color{lime}\textbf{functions\color{white} :} \color{white} ce sous-dossier contient tous les fichiers de fonctions dans différents sous-dossiers.\\[1\baselineskip]
+
+    \item \color{lime}\textbf{lang\color{white} :} \color{white} ce sous-dossier contient tous les fichiers nécessaires à la traduction des scripts (fonctionnalité future).\\[1\baselineskip]
+
+    \item \color{lime}\textbf{variables\color{white} :} \color{white} ce sous-dossier contient tous les fichiers enregistrant des variables.\\[1\baselineskip]
 \end{itemize}
 
 Description des sous-dossiers du dossier \textbf{functions}
 \setcounter{secnumdepth}{4}
 \paragraph{Fonctions}\mbox{}\\
-Chaque fichier contient des fonctions qui sont propres au nom du fichier. Par exemple, le fichier "Files.lib" ne contient que des fonctions de traitement de fichiers.
+Chaque fichier contient des fonctions qui sont propres au nom du fichier. Par exemple, le fichier "Files.lib" ne contient que des fonctions de traitement de fichiers.\\[1\baselineskip]
 
 Les trois sous-dossiers du dossier \textbf{functions} ont été créés pour différencier les différentes catégories de fichiers de fonctions (dans le dossier \textbf{functions}) :
 \begin{itemize}
-    \item \color{lime}\textbf{basis\color{white} :} \color{white} les fonctions les plus basiques (affichage de texte coloré, vérifications, gestion de couleurs, saisies de l'utilisateur).
+    \item \color{lime}\textbf{basis\color{white} :} \color{white} les fonctions les plus basiques (affichage de texte coloré, vérifications, gestion de couleurs, saisies de l'utilisateur).\\[1\baselineskip]
     
     \item \color{lime}\textbf{main\color{white} :} \color{white} les fonctions standard (traitement de fichiers, de dossiers, de permissions, gestion du temps, etc...).\\[1\baselineskip]
 
     Ces fonctions dépendent des fonctions contenues dans les fichiers du dossier "basis".\\[1\baselineskip]
 
-    \item \color{lime}\textbf{os\_specific\color{white} :} \color{white} les fonctions spécifiques aux systèmes UNIX supportés (installations, configurations, etc...)
+    \item \color{lime}\textbf{os\_specific\color{white} :} \color{white} les fonctions spécifiques aux systèmes UNIX supportés (installations, configurations, etc...)\\[1\baselineskip]
 \end{itemize}
 
-\paragraph{lang}\mbox{}\\
-Rappel : fonctionnalité future, certaines idées peuvent encore changer.\\[1\baselineskip]
+\par\noindent\rule{\textwidth}{0.4pt}
 
-Le fichier \color{lime}\textbf{lang.csv} \color{white} contient les différentes traductions de la librairie dans un fichier au format CSV. Il sera parsé (analysé) par le script d'initialisation.
+\paragraph{lang}\mbox{}\\\mbox{}\\
+\textbf{Rappel :} fonctionnalité future, certaines idées peuvent encore changer.\\[1\baselineskip]
 
-\paragraph{variables}\mbox{}\\
-Chaque fichier définit des variables propres aux catégories décrites dans le nom de chaque fichier. Par exemple, les variables définies dans le fichier \color{lime}\textbf{colors.var}\color{white} sont des variables définissant le code de la couleur d'un texte à afficher.
+Le fichier \textbf{\color{lime}lang.csv\color{white}} contient les différentes traductions de la librairie dans un fichier au format CSV. Il sera parsé (analysé) par le script d'initialisation.\\[1\baselineskip]
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\paragraph{variables}\mbox{}\\\mbox{}\\
+Chaque fichier définit des variables propres aux catégories décrites dans le nom de chaque fichier. Par exemple, les variables définies dans le fichier \textbf{\color{lime}colors.var\color{white}} sont des variables définissant le code de la couleur d'un texte à afficher.\\[1\baselineskip]
+
+
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{projects}\color{white}
-Ce dossier contient non seulement des scripts facilitant l'utilisation du shell Bash sur un système UNIX, mais aussi des scripts facilitant le développement de la librairie Bash Utils.
+Ce dossier contient non seulement des scripts facilitant l'utilisation du shell Bash sur un système UNIX, mais aussi des scripts facilitant le développement de la librairie Bash Utils.\\[1\baselineskip]
+
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{tmp}\color{white}
-Ce dossier sert à enregistrer les fichiers temporaires générés par un projet, tels que des fichiers de logs.
+Ce dossier sert à enregistrer les fichiers temporaires générés par un projet, tels que des fichiers de logs.\\[1\baselineskip]
 
-Il n'est créé que pendant l'exécution d'un projet, pendant la partie d'initialisation. Il n'est pas effacé par la suite.
+Il n'est créé que pendant l'exécution d'un projet, pendant la partie d'initialisation. Il n'est pas effacé par la suite.\\[1\baselineskip]
 
+
+\color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{red}
 \section{Fonctionnement}\color{white}
@@ -164,20 +188,29 @@ En cinquième lieu, le script :
     
     \item Modifie plusieurs variables de statut pour rendre la partie d'initialisation invisible à l'utilisateur final.
     
-    \item Copie le contenu du fichier de logs de la partie d'initialisation dans le fichier de logs principal.
+    \item Copie le contenu du fichier de logs de la partie d'initialisation dans le fichier de logs principal.\\[1\baselineskip]
 \end{itemize}
 
+\color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{red}
 \section{Documentations des fonctions et des variables de Bash Utils}\color{white}
 
 \color{green}
 \subsection{Fonctions}\color{white}
-Tous les fichiers de documentation en français concernant la description des fonctions se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/functions}\color{white}.
+Tous les fichiers de documentation en français concernant la description des fonctions se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/functions}\color{white}.\\[1\baselineskip]
+
+
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Variables}\color{white}
-Tous les fichiers de documentation en français concernant la description des variables se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/variables}\color{white}.
+Tous les fichiers de documentation en français concernant la description des variables se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/variables}\color{white}.\\[1\baselineskip]
+
+Par ailleurs, \\[1\baselineskip]
+
+\color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{red}
 \section{Installation de Bash Utils}\color{white}
