--- a/docs/fr/(Mise à jour en cours) Introduction.tex
+++ b/docs/fr/(Mise à jour en cours) Introduction.tex
@@ -47,37 +47,40 @@
 
 \color{green}
 \subsection{Présentation}\color{white}
-Bash Utils est une librairie, c'est à dire un ensemble de fonctions utilitaires, regroupées et mises à disposition afin de pouvoir être utilisées sans avoir à les réécrire.\\[1\baselineskip]
+Bash Utils est une librairie, c'est à dire un ensemble de fonctions utilitaires, regroupées et mises à\linebreak disposition afin de pouvoir être utilisées sans avoir à les réécrire.\\[1\baselineskip]
 
-Comme son nom le suggère, il s'agit d'une librairie orientée vers le langage Bash, un langage de script permettant une interaction simple avec le shell (interpréteur de commandes) du système d'exploitation, ainsi qu'avec ses différents programmes.\\[1\baselineskip]
+Comme son nom le suggère, il s'agit d'une librairie orientée vers le langage Bash, un langage de script permettant une interaction simple avec le shell (interpréteur de commandes) du système\linebreak d'exploitation, ainsi qu'avec ses différents programmes.\\[1\baselineskip]
 
-Bash Utils est divisé en deux parties : la libraire, et les modules, expliqués dans le fichier \linebreak \textbf{\color{lime}modules/Fonctionnement.pdf\color{white}}.\\[1\baselineskip]
+Bash Utils est divisé en deux parties : la libraire, et les modules, expliqués plus en détails dans le\linebreak fichier \textbf{\color{lime}modules/Fonctionnement.pdf\color{white}}.\\[1\baselineskip]
 
-Le shell utilisé est le Bash, qui est de loin le shell le plus utilisé dans le monde d'UNIX. Ce choix s'explique non seulement par sa vaste présence, mais aussi par sa très vaste documentation disponible.
+Le shell utilisé est le Bash, qui est de loin le shell le plus utilisé dans le monde d'UNIX. Ce choix\linebreak s'explique non seulement par sa vaste présence, mais aussi par sa très vaste documentation\linebreak disponible et ses fonctionnalités (notamment les tableaux).\\[1\baselineskip]
+
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Utilisation}\color{white}
 Pour utiliser cette librairie, il vous suffira de sourcer un seul fichier :
 \begin{itemize}
-    \item \color{orange}\textbf{\$HOME\color{lime}/.Bash-utils-init.sh\color{white} :} \color{white} Ce fichier 
+    \item \color{orange}\textbf{\$HOME\color{lime}/.Bash-utils-init.sh\color{white}}\color{white}\\[1\baselineskip]
 \end{itemize}
+
+Ce script initialise tous les modules de la librairie passés en argument lors de l'exécution de ce dernier.\\[1\baselineskip]
+
+
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Architecture}\color{white}
-Bash Utils est un ensemble de fichiers shell à sourcer dans un script (servant de fichiers source), de fichiers de configuration, d'outils de développement ou encore de scripts déjà prêts à l'exécution.\\[1\baselineskip]
+La partie librairie de Bash Utils est un ensemble de fichiers source shell à sourcer dans un script, d'outils de développement ou encore de scripts déjà prêts à l'exécution.\\[1\baselineskip]
 
 Les dossiers contenus dans  :
 \color{blue}
 \subsubsection{bin}\color{white}
+Ce lien symbolique pointe vers le dossier \textbf{\color{lime}res/dev-tools/dev-bin\color{white}}.\\[1\baselineskip]
+
 Ce dossier contient les fichiers exécutables nécessaires au bon fonctionnement de la librairie.\\[1\baselineskip]
-
-
-
-\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
-
-\color{blue}
-\subsubsection{config}\color{white}
-Ce dossier contient les fichiers de configuration de la librairie.\\[1\baselineskip]
 
 
 
@@ -101,32 +104,24 @@ Ce dossier contient les fichiers et dossiers nécessaires à l'installation auto
 
 \color{blue}
 \subsubsection{lib}\color{white}
-Ce dossier est le plus important de tous, car il contient tous les fichiers source de la librairie (fonctions et variables), ainsi que le fichier d'initialisation à sourcer dans un script principal.\\[1\baselineskip]
+Ce dossier est le plus important de tous, car il contient tous les fichiers source de la librairie\linebreak (fonctions et variables).\\[1\baselineskip]
 
-Il contient trois sous-dossiers :
+Il contient les sous-dossiers suivants :
 \begin{itemize}
     \item \color{lime}\textbf{functions\color{white} :} \color{white} ce sous-dossier contient tous les fichiers de fonctions dans différents sous-dossiers.\\[1\baselineskip]
 
-    \item \color{lime}\textbf{lang\color{white} :} \color{white} ce sous-dossier contient tous les fichiers nécessaires à la traduction des scripts (fonctionnalité future).\\[1\baselineskip]
-
-    \item \color{lime}\textbf{variables\color{white} :} \color{white} ce sous-dossier contient tous les fichiers enregistrant des variables.\\[1\baselineskip]
+    \item \color{lime}\textbf{lang\color{white} :} \color{white} ce sous-dossier contient tous les fichiers nécessaires à la traduction des scripts\linebreak (fonctionnalité future).\\[1\baselineskip]
 \end{itemize}
 
-Description des sous-dossiers du dossier \textbf{functions}
+Description des sous-dossiers du dossier \textbf{functions} :\\[1\baselineskip]
+
 \setcounter{secnumdepth}{4}
-\paragraph{Fonctions}\mbox{}\\
-Chaque fichier contient des fonctions qui sont propres au nom du fichier. Par exemple, le fichier "Files.lib" ne contient que des fonctions de traitement de fichiers.\\[1\baselineskip]
+\paragraph{functions}\mbox{}\\
+Les sous-dossiers du dossier \textbf{functions} sont liés à un module et contiennent les fichiers source de chaque module.\\[1\baselineskip]
 
-Les trois sous-dossiers du dossier \textbf{functions} ont été créés pour différencier les différentes catégories de fichiers de fonctions (dans le dossier \textbf{functions}) :
-\begin{itemize}
-    \item \color{lime}\textbf{basis\color{white} :} \color{white} les fonctions les plus basiques (affichage de texte coloré, vérifications, gestion de couleurs, saisies de l'utilisateur).\\[1\baselineskip]
-    
-    \item \color{lime}\textbf{main\color{white} :} \color{white} les fonctions standard (traitement de fichiers, de dossiers, de permissions, gestion du temps, etc...).\\[1\baselineskip]
+Chaque fichier source contient des fonctions qui sont propres au nom du fichier. Par exemple, le\linebreak fichier \textbf{\color{lime}Files.lib\color{white}} du module \textbf{main} ne contient que des fonctions de traitement de fichiers.\\[1\baselineskip]
 
-    Ces fonctions dépendent des fonctions contenues dans les fichiers du dossier "basis".\\[1\baselineskip]
 
-    \item \color{lime}\textbf{os\_specific\color{white} :} \color{white} les fonctions spécifiques aux systèmes UNIX supportés (installations, configurations, etc...)\\[1\baselineskip]
-\end{itemize}
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
@@ -134,6 +129,8 @@ Les trois sous-dossiers du dossier \textbf{functions} ont été créés pour dif
 \textbf{Rappel :} fonctionnalité future, certaines idées peuvent encore changer.\\[1\baselineskip]
 
 Le fichier \textbf{\color{lime}lang.csv\color{white}} contient les différentes traductions de la librairie dans un fichier au format CSV. Il sera parsé (analysé) par le script d'initialisation.\\[1\baselineskip]
+
+
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
@@ -145,7 +142,19 @@ Chaque fichier définit des variables propres aux catégories décrites dans le 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{projects}\color{white}
+\subsubsection{res}\color{white}
+Ce dossier contient plusieurs sous-dossiers :
+\begin{itemize}
+    \item \textbf{\color{lime}basis\color{white} :} les fonctions les plus basiques (affichage de texte coloré, vérifications, gestion\linebreak de couleurs, saisies de l'utilisateur).\\[1\baselineskip]
+\end{itemize}
+
+Description des sous-dossiers du dossier \textbf{functions}
+\setcounter{secnumdepth}{4}
+\paragraph{Fonctions}\mbox{}\\
+
+
+
+
 Ce dossier contient non seulement des scripts facilitant l'utilisation du shell Bash sur un système UNIX, mais aussi des scripts facilitant le développement de la librairie Bash Utils.\\[1\baselineskip]
 
 
