Updating the French documentation

--- a/docs/fr/(Mise à jour en cours) Introduction.tex
+++ b/docs/fr/(Mise à jour en cours) Introduction.tex
@@ -145,10 +145,16 @@ Chaque fichier définit des variables propres aux catégories décrites dans le 
 \subsubsection{res}\color{white}
 Ce dossier contient plusieurs sous-dossiers :
 \begin{itemize}
-    \item \textbf{\color{lime}basis\color{white} :} les fonctions les plus basiques (affichage de texte coloré, vérifications, gestion\linebreak de couleurs, saisies de l'utilisateur).\\[1\baselineskip]
+    \item \textbf{\color{lime}dev-tools\color{white} :} les fonctions les plus basiques (affichage de texte coloré, vérifications, gestion\linebreak de couleurs, saisies de l'utilisateur).\\[1\baselineskip]
+
+    \item \textbf{\color{lime}ideas\color{white} :} .\\[1\baselineskip]
+
+    \item \textbf{\color{lime}src\color{white} :} .\\[1\baselineskip]
+
+    \item \textbf{\color{lime}tests\color{white} :} .\\[1\baselineskip]
 \end{itemize}
 
-Description des sous-dossiers du dossier \textbf{functions}
+Description des sous-dossiers du dossier \textbf{res} :
 \setcounter{secnumdepth}{4}
 \paragraph{Fonctions}\mbox{}\\
 
